Cleaned up breakpoints, fixed top-right-yoga on mobile screens

--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -47,7 +47,11 @@
 }
 
 .top-right-text {
-  float: right;
+
+  @include breakpoint($responsive-width-min) {
+    float: right;
+  }
+
   margin: auto;
   text-align: center;
   font-family: 'Nothing You Could Do', cursive;
