--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -141,6 +141,10 @@ $large: 1024px !default;
 $x-large: 1600px !default;
 $max-width: $x-large !default;
 
+// This is the width at which elements collapse to become responsive
+$responsive-width-max: max-width 1024px;
+$responsive-width-min: min-width 1024px;
+
 /*
    Grid
    ========================================================================== */
